# tupmoud

./: .replit  CMakeLists.txt  compile_commands.json  replit.nix
include/: autobuild.h  build.h  install.h
src/: autobuild.c  build.c  install.c  main.c
